Fixed footer layout issues

--- a/main.css
+++ b/main.css
@@ -169,10 +169,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 6px;
+        font-size: 14px;
+        gap: 4px;
         padding: 0;
         height: 2vh;
-        /* height: fit-content; */
+        margin-block: 2px;
     }
 }
 
